--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     <div id="contact" class="vh-100 bg-white py-5">
       <div class="container">
-        <h1 class="text-center text-danger mb-4 fw-bold sticky-top">Contact <span class="text-dark">Us</span></h1>
+        <h1 class="text-center text-danger mb-4 fw-bold ">Contact <span class="text-dark">Us</span></h1>
         <p class="text-center text-muted mb-4">Have a question or need assistance? <span class="text-danger">Get in
             touch with us!</span></p>
         <br>
